--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ clap = { version = "4.0", features = ["derive"] }
 text_io = "0.1.12"
 rpassword = "0.0.4"
 chacha20poly1305 = "0.10.1"
+reqwest = { version = "0.11.13", features = ["blocking", "json"] }
+base64 = "0.20.0"
+serde_json = "1.0.91"
+serde = { version = "1.0.151", features = ["derive"] }
