--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ reqwest = { version = "0.11.13", features = ["blocking", "json"] }
 base64 = "0.20.0"
 serde_json = "1.0.91"
 serde = { version = "1.0.151", features = ["derive"] }
+chrono = "0.4.23"
