--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ base64 = "0.20.0"
 serde_json = "1.0.91"
 serde = { version = "1.0.151", features = ["derive"] }
 chrono = "0.4.23"
+config = "0.13.3"
+serde_derive = "1.0.151"
+shellexpand = "3.0.0"
