Use expiration flag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 text_io = "0.1.12"
-rpassword = "0.0.4"
+rpassword = "7.2.0"
 chacha20poly1305 = "0.10.1"
 reqwest = { version = "0.11.13", features = ["blocking", "json"] }
 base64 = "0.20.0"
@@ -19,3 +19,6 @@ config = "0.13.3"
 serde_derive = "1.0.151"
 shellexpand = "3.0.0"
 aes-gcm = "0.10.1"
+clap-duration = "0.1.11"
+duration-human = "0.1.10"
+humantime = "2.1.0"
